2003-03-31  Andreas Kupries  <andreask@activestate.com>

	* csv.tcl (split): Fixed bug #709123 reported by Jamie Honan
	  <jhonan@users.sourceforge.net>. The separator character is used
	  in regular epxressions, but was not protected against special
	  interpretation by the RE engine.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.man: More semantic markup, less visual one.

2002-06-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.tcl (csv::split): Fixed bug #565051, found by Tod A. olson
	  <todolson@users.sourceforge.net>. The described bug is actually
	  none, given the definition of the CSV format, but the examples
	  do contain a related bug. Just swap what is seen as ok and
	  bug. Because of this the provided patched code was rejected, and
	  a new patch created. The patched code passes the extended
	  testsuite (see below).

	* csv.test: Extended testsuite regarding the handling of empty
	  fields and quote characters. Part of the investigation into bug
	  #565051.

2002-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.man: Fixed formatting errors in the doctools manpage.

2002-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Version up to 0.3 to differentiate development from the
	  version in the tcllib 1.2 release.

	* mem_debug_bench_a.csv: New file, contains empty lines to test
	  that part of the code. See below.
	* csv.tcl: 
	* csv.test: Updated code and tests to cover all paths through the
	  code.

2002-01-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 0.2

2001-11-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.n: Applied patch #482570 correcting a typo and adding more
	  cross-references (see also, keywords). Patch provided by Larry
	  Virden <lvirden@users.sourceforge.net>.

2001-11-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv.test:
	* cvs.n: