@@ -1,3 +1,4 @@
+[comment {-*- tcl -*-}]
 [manpage_begin csv n 0.3]
 [copyright {2002 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {CSV processing}]
@@ -33,14 +34,14 @@ outer list is considered a record, these are separated by newlines in
 the result. The elements of each record are formatted as usual (via
 [cmd ::csv::join]).
 
-[call [cmd ::csv::read2matrix] [arg "chan m"] "{[arg sepChar] ,} {[arg expand] none}"]
+[call [cmd ::csv::read2matrix] [opt [option -alternate]] [arg "chan m"] "{[arg sepChar] ,} {[arg expand] none}"]
 
 A wrapper around [cmd ::csv::split2matrix] (see below) reading
 CSV-formatted lines from the specified channel (until EOF) and adding
 them to the given matrix. For an explanation of the [arg expand]
 argument see [cmd ::csv::split2matrix].
 
-[call [cmd ::csv::read2queue] [arg "chan q"] "{[arg sepChar] ,}"]
+[call [cmd ::csv::read2queue] [opt [option -alternate]] [arg "chan q"] "{[arg sepChar] ,}"]
 
 A wrapper around [cmd ::csv::split2queue] (see below) reading
 CSV-formatted lines from the specified channel (until EOF) and adding
@@ -57,14 +58,21 @@ expected to be either [method printmatrix] or
 [method printmatrix2channel]. The channel argument, [arg chan], has
 to be present for the latter and must not be present for the first.
 
-[call [cmd ::csv::split] [arg line] "{[arg sepChar] ,}"]
+[call [cmd ::csv::split] [opt [option -alternate]] [arg line] "{[arg sepChar] ,}"]
 
 converts a [arg line] in CSV format into a list of the values
 contained in the line. The character used to separate the values from
 each other can be defined by the caller, via [arg sepChar], but this
 is optional. The default is ",".
 
-[call [cmd ::csv::split2matrix] [arg "m line"] "{[arg sepChar] ,} {[arg expand] none}"]
+[nl]
+
+If the option [option -alternate] is spcified a slightly different
+syntax is used to parse the input. This syntax is explained below, in
+the section [sectref FORMAT].
+
+
+[call [cmd ::csv::split2matrix] [opt [option -alternate]] [arg "m line"] "{[arg sepChar] ,} {[arg expand] none}"]
 
 The same as [cmd ::csv::split], but appends the resulting list as a
 new row to the matrix [arg m], using the method [cmd "add row"]. The
@@ -98,7 +106,7 @@ all columns of the longest line encountered so far.
 
 [list_end]
 
-[call [cmd ::csv::split2queue] [arg "q line"] "{[arg sepChar] ,}"]
+[call [cmd ::csv::split2queue] [opt [option -alternate]] [arg "q line"] "{[arg sepChar] ,}"]
 
 The same as [cmd ::csv::split], but appending the resulting list as a
 single item to the queue [arg q], using the method [cmd put].
@@ -119,19 +127,38 @@ into the channel [arg chan].
 [section FORMAT]
 [para]
 
+The format of regular CSV files is specified as 
+
+[list_begin enum]
+
+[enum]
 Each record of a csv file (comma-separated values, as exported e.g. by
 Excel) is a set of ASCII values separated by ",". For other languages
-it may be ";" however, although this is not important for this case
-(The functions provided here allow any separator character).
+it may be ";" however, although this is not important for this case as
+the functions provided here allow any separator character.
 
+[enum]
+If and only if a value contains itself the separator ",", then it (the
+value) has to be put between "". If the value does not contain the
+separator character then quoting is optional.
+
+[enum]
+If a value contains the character ", that character is represented by "".
+
+[enum]
+The output string "" represents the value ". In other words, it is
+assumed that it was created through rule 3, and only this rule,
+i.e. that the value was not quoted.
+
+[list_end]
 [para]
 
-If a value contains itself the separator ",", then it (the value) is
-put between "".
+The alternate format is activated through specification of the option
+[option -alternate] to the various split commands. Only one thing has
+changed in the alternate format: The output "" represents the empty
+string. In other words, it is assumed that it was generated out of the
+empty string by quoting it (rule 2), and not through rule 3.
 
-[para]
-
-If a value contains ", it is replaced by "".
 
 [section EXAMPLE]
 
@@ -143,7 +170,7 @@ The record
 }]
 
 [para]
-is parsed as follows:
+is parsed as follows, when using the regular syntax.
 
 [para]
 [example {
