@@ -1,3 +1,9 @@
+2003-04-23  Andreas Kupries  <andreask@activestate.com>
+
+	* csv.man:  Extended to handle a slightly different alternate
+	* cvs.tcl:  syntax of CSV files. This takes care of bug
+	* csv.test: [606141].
+
 2003-03-31  Andreas Kupries  <andreask@activestate.com>
 
 	* csv.tcl (split): Fixed bug #709123 reported by Jamie Honan
